--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ input:checked + .slider::before {
   border-radius: 50%;
 }
 
-.fa {
+.fa-sun, .fa-moon {
   font-size: 30px;
   margin-right: 5px;
 }
